Fix -{product card overflow issue solved}

--- a/src/App.css
+++ b/src/App.css
@@ -697,7 +697,7 @@
     font-weight: 200;
   }
 }
-@media (max-width: 350px) {
+@media (max-width: 430px) {
   .highlights {
     display: none;
     padding-left: 2px;
