--- a/src/assets/scss/_product.scss
+++ b/src/assets/scss/_product.scss
@@ -317,7 +317,7 @@
         }
       }
 }
-@media(max-width:350px){
+@media(max-width:430px){
     .highlights {
         display: none;
         padding-left: 2px;
